# cs40F16-examples

./: .gitignore  CMakeLists.txt  MacSetup.md  README.md
cmake_modules/: FindGLFW3.cmake
common/: CMakeLists.txt  cylinder.cpp  cylinder.h  matrixstack.cpp  matrixstack.h  sphere.cpp  sphere.h  square.cpp  square.h
w01-intro/: CMakeLists.txt
w01-intro/opengl/: CMakeLists.txt  README.md
w01-intro/qtImage/: CMakeLists.txt  main.cpp
w01-intro/qtogl/: CMakeLists.txt  main.cpp  mainwindow.ui  mypanelopengl.cpp  mypanelopengl.h
w01-intro/qtogl/shaders/: fshader.glsl  vshader.glsl
w01-intro/simpletests/: CMakeLists.txt  glmTest.cpp  helloCS40.cpp  mathTest1.cpp  mathTest2.cpp
w02-opengl/: CMakeLists.txt  main.cpp  mypanelopengl.cpp  mypanelopengl.h
w02-opengl/shaders/: fshader.glsl  vshader.glsl
w04-3D/: CMakeLists.txt
w04-3D/cube/: CMakeLists.txt  fshader.glsl  main.cpp  mainwindow.ui  mypanelopengl.cpp  mypanelopengl.h  vshader.glsl
w04-3D/sphere/: CMakeLists.txt  data  fshader.glsl  main.cpp  mainwindow.ui  matrixstack.cpp  matrixstack.h  mypanelopengl.cpp  mypanelopengl.h  sphere.cpp  sphere.h  square.cpp  square.h  vshader.glsl
w05-perspective/: CMakeLists.txt  mainwindow.ui  matrixstack.cpp  matrixstack.h  mypanelopengl.cpp  mypanelopengl.h  sphere.cpp  sphere.h  square.cpp  vshader.glsl
w06-lighting/: CMakeLists.txt  ffraglight.glsl  fshader.glsl  mainwindow.h  mainwindow.ui  mypanelopengl.cpp  mypanelopengl.h  vfraglight.glsl  vshader.glsl
w06-nmap/: CMakeLists.txt  fshader.glsl  fshader2.glsl  fshader3.glsl  main.cpp  mainwindow.h  mainwindow.ui  mypanelopengl.cpp  mypanelopengl.h  vshader.glsl  vshader2.glsl  vshader3.glsl
w07-particles/: CMakeLists.txt  fshader.glsl  fshader2.glsl  main.cpp  mainwindow.ui  mypanelopengl.cpp  mypanelopengl.h  vshader.glsl  vshader2.glsl
w08-cuda-pt1/: CMakeLists.txt  add_loop_cpu.cpp  add_loop_gpu.cu  add_loop_long.cu  cpu_bitmap.h  enum_gpu.cu  hello_world.cu  julia_cpu.cpp  julia_gpu.cu  julia_gpu_timed.cu  set_gpu.cu  simple_device_call.cu  simple_kernel.cu  simple_kernel_params.cu  timer.h
w09-cuda-pt2/: CMakeLists.txt  book.cu  book.h  cpu_anim.h  cpu_bitmap.h  cudahelpers.cu  cudahelpers.h  dot.cu  fshader.glsl  gl_helper.h  gpu_anim.h  heat.cu  mainwindow.ui  mypanelopengl.cpp  mypanelopengl.h  ray.cu  ray_noconst.cu  ripple.cu  set_gpu.cu  shared_bitmap.cu  timer.cpp  timer.cu  timer.h  vshader.glsl
w10-noise/: CMakeLists.txt  test_noise.cpp
w11-noise2/: CMakeLists.txt  main.cpp  mainwindow.ui  myimagebox.cpp  myimagebox.h  test_noise.cpp
w12-voronoi/: CMakeLists.txt  cones.cpp
w13-gshader/: CMakeLists.txt  gnormals.glsl  gshader.glsl  mainwindow.ui  mypanelopengl.cpp  mypanelopengl.h  vnormals.glsl
